[gd_scene load_steps=3 format=2]

[ext_resource path="res://sample_scene.gd" type="Script" id=1]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=2]

[node name="sample_scene" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monitor_size" type="Label" parent="."]
margin_left = 469.0
margin_top = 16.0
margin_right = 810.0
margin_bottom = 55.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Monitor Size: 0x0
(May be off on monitors with scaling)"
align = 1

[node name="display_container" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 421.0
margin_bottom = 704.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="display_container"]
margin_right = 405.0
margin_bottom = 18.0
text = "Display settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="separator" type="HSeparator" parent="display_container"]
margin_top = 26.0
margin_right = 405.0
margin_bottom = 30.0

[node name="fullscreen_toggle" type="CheckButton" parent="display_container"]
margin_top = 38.0
margin_right = 405.0
margin_bottom = 76.0
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vysnc_toggle" type="CheckButton" parent="display_container"]
margin_top = 84.0
margin_right = 405.0
margin_bottom = 122.0
text = "Vsync"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window_size_label" type="Label" parent="display_container"]
margin_top = 130.0
margin_right = 405.0
margin_bottom = 148.0
text = "Window size (doesn't affect fullscreen)"

[node name="window_size_container" type="HBoxContainer" parent="display_container"]
margin_top = 156.0
margin_right = 405.0
margin_bottom = 182.0

[node name="width_spinbox" type="SpinBox" parent="display_container/window_size_container"]
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 0 )
min_value = 200.0
max_value = 1920.0
value = 1280.0

[node name="by_label" type="Label" parent="display_container/window_size_container"]
margin_left = 154.0
margin_top = 4.0
margin_right = 176.0
margin_bottom = 22.0
text = "by"

[node name="height_spinbox" type="SpinBox" parent="display_container/window_size_container"]
margin_left = 180.0
margin_right = 330.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 0 )
min_value = 200.0
max_value = 1080.0
value = 720.0

[node name="apply_button" type="Button" parent="display_container/window_size_container"]
margin_left = 334.0
margin_right = 405.0
margin_bottom = 26.0
text = "Apply"

[node name="window_position_label" type="Label" parent="display_container"]
margin_top = 190.0
margin_right = 405.0
margin_bottom = 208.0
text = "Window position"

[node name="window_position_container" type="HBoxContainer" parent="display_container"]
margin_top = 216.0
margin_right = 405.0
margin_bottom = 242.0

[node name="x_spinbox" type="SpinBox" parent="display_container/window_position_container"]
margin_right = 120.0
margin_bottom = 26.0
rect_min_size = Vector2( 120, 0 )
max_value = 2000.0
prefix = "X:"

[node name="y_spinbox" type="SpinBox" parent="display_container/window_position_container"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 26.0
rect_min_size = Vector2( 120, 0 )
max_value = 2000.0
prefix = "Y:"

[node name="apply_button" type="Button" parent="display_container/window_position_container"]
margin_left = 248.0
margin_right = 319.0
margin_bottom = 26.0
text = "Apply"

[node name="center_window_button" type="Button" parent="display_container"]
margin_top = 250.0
margin_right = 405.0
margin_bottom = 276.0
text = "Center window"

[node name="clipboard" type="VBoxContainer" parent="."]
margin_left = 964.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 704.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clipboard_contents" type="Label" parent="clipboard"]
margin_right = 300.0
margin_bottom = 18.0
text = "Clipboard Contents"
align = 1

[node name="separator" type="HSeparator" parent="clipboard"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 30.0

[node name="clipboard_button" type="Button" parent="clipboard"]
margin_top = 38.0
margin_right = 300.0
margin_bottom = 64.0
text = "Paste clipboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clipboard_source" type="LineEdit" parent="clipboard"]
margin_top = 72.0
margin_right = 300.0
margin_bottom = 98.0
placeholder_text = "Type contents to copy"
placeholder_alpha = 0.789

[node name="copy_clipboard_button" type="Button" parent="clipboard"]
margin_top = 106.0
margin_right = 300.0
margin_bottom = 132.0
text = "Copy to clipboard"

[node name="datetime" type="Label" parent="."]
margin_left = 1184.0
margin_top = 686.0
margin_right = 1264.0
margin_bottom = 704.0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Datetime"

[connection signal="toggled" from="display_container/fullscreen_toggle" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="display_container/vysnc_toggle" to="." method="_on_vysnc_toggled"]
[connection signal="pressed" from="display_container/window_size_container/apply_button" to="." method="_on_apply_window_size"]
[connection signal="pressed" from="display_container/window_position_container/apply_button" to="." method="_on_apply_window_position"]
[connection signal="pressed" from="display_container/center_window_button" to="." method="_on_center_window_pressed"]
[connection signal="pressed" from="clipboard/clipboard_button" to="." method="_on_clipboard_button_pressed"]
[connection signal="pressed" from="clipboard/copy_clipboard_button" to="." method="_on_copy_clipboard_pressed"]
